updated code, removed remaining div added section tag

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,7 +28,7 @@
     </section>
 
 <!-- changed all div tags to sections tags in the code below -->    
-    <div class="hero"></div>
+    <section class="hero"></section>
     <section class="content">
 
 <!-- added section id="search-engine-optimization" to fix broken scroll link-->        
